--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "personal-site",
   "version": "0.1.0",
-  "homepage": "https://johncorn.github.io/personal-site/",
-
+  "homepage": "https://www.johncorn.xyz/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.14",
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.26",
